add flight re-curl GameAPI submodule

--- a/.gitmodules
+++ b/.gitmodules
@@ -4,3 +4,6 @@
 [submodule "Power-up Display/GameAPI"]
 	path = Power-up Display/GameAPI
 	url = https://github.com/Rubberduckycooly/GameAPI/
+[submodule "Flight Re-curl/GameAPI"]
+	path = Flight Re-curl/GameAPI
+	url = https://github.com/Rubberduckycooly/GameAPI/
